--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,23 +2,17 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
 name: Node.js CI
-
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [14.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
@@ -28,3 +22,4 @@ jobs:
     - run: npm ci
     - run: npm test
     - run: npm run build
+    - run: npm run deploy
