--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "svelte-app",
   "version": "1.0.0",
+  "homepage": "https://enolive.github.io/chuck-norris-svelte",
   "private": true,
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear",
-    "validate": "svelte-check"
+    "validate": "svelte-check",
+    "deploy": "gh-pages -d public"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
@@ -37,6 +39,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.6.0",
+    "gh-pages": "^3.1.0",
     "sirv-cli": "^1.0.0"
   },
   "jest": {
