--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,3 +23,5 @@ jobs:
     - run: npm test
     - run: npm run build
     - run: npm run deploy
+      env:
+        GITHUB_TOKEN: ${{ secrets.github_token }}
